# simpledb-c

./: .gitignore  .gitmodules  CMakeLists.txt
include/: page.h
include/file/: block.h
src/: add.c  block.c  main.c  page.c
src/file/: block.c  page.c
tests/: exaple_test.cpp  test_add.cpp  test_block.cpp  test_page.cpp
